--- a/mysql-gogs/mysql.service
+++ b/mysql-gogs/mysql.service
@@ -6,7 +6,7 @@ After=docker.service
 TimeoutStartSec=10
 ExecStartPre=-/usr/bin/docker kill mysql-gogs1
 ExecStartPre=-/usr/bin/docker rm mysql-gogs1
-ExecStart=/usr/bin/docker run --name mysql-gogs1 -e MYSQL_ROOT_PASSWORD=coreos -e MYSQL_DATABASE=gogs -e MYSQL_USER=goggy -e MYSQL_PASSWORD=coreos -d mysql:latest
+ExecStart=/usr/bin/docker run --name mysql-gogs1 -e MYSQL_ROOT_PASSWORD=coreos -e MYSQL_DATABASE=gogs -e MYSQL_USER=goggy -e MYSQL_PASSWORD=coreos -d mysql:5
 
 [Install]
 WantedBy=multi-user.target
